[workspace]
members = ["navigation_compass_solver", "museum_solver", "bin_by_img", "tools_wasm"]
resolver = "2"

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true  # Automatically strip symbols from the binary.
incremental = false
