[package]
name = "tools_wasm"
version = "0.1.0"
edition = "2021"
authors = ["Golden_Water"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
navigation_compass_solver = { path = "../navigation_compass_solver" }

wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
log = "0.4.17"
js-sys = "0.3.61"
web-sys = "0.3.61"