[package]
name = "video_in_waveform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
image = "0.24.7"
indicatif = { version = "0.17.7", features = ["rayon"] }
itertools = "0.12.0"
rayon = "1.8.0"
